<resources>
    <string name="app_name">Swiftmart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earbuds">Earbuds</string>
    <string name="boat">boAt</string>
    <string name="airdopes_alpha_with_35">Airdopes Alpha with 35...</string>
    <string name="_71">71%</string>
    <string name="_3_490">3,490</string>
    <string name="_999">₹999</string>
    <string name="save_extra_with_vombo_offers">Save extra with vombo offers</string>
    <string name="express">EXPRESS</string>
    <string name="_1_day_delivery">1 day delivery</string>
    <string name="airdopes_supreme_w_4">Airdopes Supreme w/4...</string>
    <string name="_4_990">4,990</string>
    <string name="_1_399">₹1,399</string>
    <string name="airdopes_alpha_with_35_hrs_playback_13mm_drivers_duai_mics_enx_and_beast_mode_blutooth_headset_jet_black_in_the_ear">Airdopes Alpha with 35 HRS Playback, 13mm Drivers, Duai Mics ENx And Beast Mode Blutooth Headset (Jet Black , In the Ear )</string>
    <string name="_3_9">3.9</string>
    <string name="_4_43_600_ratings">4,43,600 ratings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="earphones">Earphones</string>
    <string name="leptops">Leptops</string>
    <string name="mobiles">Mobiles</string>
    <string name="iphone">iPhone</string>
    <string name="vivo">Vivo</string>
    <string name="oppo">Oppo</string>
    <string name="redmi">Redmi</string>
    <string name="realme">Realme</string>
    <string name="samsung">Samsung</string>
    <string name="motorola">Motorola</string>
    <string name="poco">Poco</string>
    <string name="goggle">Goggle</string>
    <string name="oneplus">Oneplus</string>
    <string name="iqoo">Iqoo</string>
    <string name="nothing">Nothing</string>
    <string name="iphones">iPhones</string>
    <string name="television">Television</string>
    <string name="warranty_details">Warranty details</string>
    <string name="tv">Tv</string>
    <string name="laptops">Laptops</string>
    <string name="headphones">Headphones</string>
    <string name="speakers">Speakers</string>
    <string name="keywords">Keyboard</string>
    <string name="mouses">Mouses</string>
    <string name="camera">Camera</string>
    <string name="smartwatches">Smartwatches</string>
    <string name="tablets">Tablets</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="default_web_client_id">892451060696-7n9qvlnt2adqdis5t5ct16662e0ne66u.apps.googleusercontent.com</string>
</resources>