<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/explore"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/explore"/>


    <item
        android:id="@+id/category"
        android:icon="@drawable/baseline_category_24"
        android:title="@string/category"/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account"/>


    <item
        android:id="@+id/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart"/>

</menu>