<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MobilesActivity">

<!--    Top bar-->
    <RelativeLayout
        android:id="@+id/lytoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#D5D2D2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backmobiles"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginStart="10sp"
            android:layout_centerVertical="true"
            android:background="@drawable/baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="40sp"
            android:textStyle="bold"
            android:id="@+id/text"
            android:text="@string/mobiles"
            android:fontFamily="@font/poppinsbold"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/search"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="105sp"
            android:src="@drawable/baseline_search_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/camera"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="65sp"
            android:src="@drawable/baseline_photo_camera_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:id="@+id/gelery"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25sp"
            android:src="@drawable/baseline_insert_photo_24" />


    </RelativeLayout>

   <ScrollView
       android:id="@+id/mobileScrollView"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/mobileHorizontalScrollView"
            android:layout_width="match_parent"
            android:layout_marginStart="8sp"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            iPhone-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iphone"
                android:layout_weight="1"
                android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:src="@drawable/iphone"
                android:layout_marginHorizontal="10sp"
                android:layout_gravity="center"
                android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/iphone"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Samsung-->
            <LinearLayout
                android:id="@+id/samsung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/samsung"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/samsung"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Vivo-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:id="@+id/vivo"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vivo"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/vivo"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Oppo-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oppo"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/oppo"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/oppo"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            MI-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/mi"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mi"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/redmi"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Realme-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/realme"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/realme"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/realme"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Motorola-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/motorola"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/motorola"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/motorola"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Poco-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/poco"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/poco"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/poco"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Google-->
            <LinearLayout
                android:id="@+id/goggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/goggle"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/goggle"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            OnePlus-->
            <LinearLayout
                android:id="@+id/oneplues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/oneplue"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/oneplus"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            IQOO-->
            <LinearLayout
                android:id="@+id/iqoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10sp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/iqoo"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/iqoo"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

<!--            Nothing-->
            <LinearLayout
                android:id="@+id/nothing"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:src="@drawable/nothing"
                    android:layout_gravity="center"
                    android:layout_height="60dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/nothing"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>



        </LinearLayout>

        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="7dp"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="10dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/mobileActivityProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mobileRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"/>


    </LinearLayout>
</ScrollView>
</LinearLayout>